# electer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.workflow  README.md  sqlx-data.json
.github/workflows/: test-build.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.ts
frontend/src/components/: AuthDialog.svelte  CreatePoll.svelte  PollCard.svelte  PollDialog.svelte  ResultsChart.svelte
frontend/src/models/: Poll.ts
migrations/: 20211111072837_initial-schema.sql
src/: auth.rs  errors.rs  main.rs
src/models/: mod.rs  poll.rs  poll_option.rs  user.rs
src/routes/: auth.rs  mod.rs  polls.rs  users.rs
src/services/: polls.rs  users.rs
src/utils/: mod.rs
