[package]
name = "electer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"

tower-http = { git = "https://github.com/tower-rs/tower-http/", features = ["add-extension", "fs", "auth"] }
http = "0.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

lazy_static = "1"
jsonwebtoken = "7.2"
hmac = "0.11"
base64 = "0.13"
headers = "0.3"
sha2 = "0.9"
rand = "0.8"
bcrypt = "0.10"

serde = { version = "1", features = ["derive"]}
serde_json = "1"

anyhow = "1"

[dependencies.sqlx]
version = "0.5"
features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "offline",
]
